Work on Input form

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "16.8.6",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "uid": "0.0.2"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
