--- a/package.json
+++ b/package.json
@@ -19,18 +19,24 @@
   },
   "dependencies": {
     "@craco/craco": "5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "1.10.0",
     "docz": "1.2.0",
     "docz-theme-default": "1.2.0",
     "dotenv": "8.0.0",
     "express": "4.17.0",
+    "i": "^0.3.6",
     "mongoose": "5.5.10",
     "nodemon": "1.19.0",
+    "npm": "^6.9.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.1",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-floating-action-button": "^1.0.5",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
     "styled-components": "4.2.0",
@@ -51,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2"
   }
 }
