--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "1.10.0",
-    "docz": "1.2.0",
-    "docz-theme-default": "1.2.0",
+    "docz": "^1.2.0",
+    "docz-theme-default": "^1.2.0",
     "dotenv": "8.0.0",
     "express": "4.17.0",
     "i": "^0.3.6",
@@ -33,7 +33,7 @@
     "npm": "^6.9.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.17.1",
-    "prop-types": "15.7.2",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-floating-action-button": "^1.0.5",
