Pt 1 of MR CodeReview

--- a/src/app/MockIdeasData.JSON
+++ b/src/app/MockIdeasData.JSON
@@ -1,7 +1,8 @@
 [{
   "id": "",
   "title": "My Great Idea",
-  "text": "Everything Begins With An Idea."
+  "text": "Everything Begins With An Idea.",
+  "areas": ["sales", "production"]
 },
 {
   "id": "",
