--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "8.0.0",
     "express": "4.17.0",
     "i": "^0.3.6",
+    "moment": "^2.24.0",
     "mongoose": "5.5.10",
     "nodemon": "1.19.0",
     "npm": "^6.9.0",
