--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "1.10.0",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "docz": "1.2.0",
     "docz-theme-default": "1.2.0",
     "dotenv": "8.0.0",
     "express": "4.17.0",
+    "final-form": "^4.13.1",
     "i": "^0.3.6",
     "mongoose": "5.5.10",
     "nodemon": "1.19.0",
@@ -37,8 +39,10 @@
     "prettier": "1.17.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "16.8.6",
+    "react-final-form": "^6.0.1",
     "react-floating-action-button": "^1.0.5",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
