--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0-rc.0",
     "babel-plugin-styled-components": "1.10.0",
-    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "docz": "1.2.0",
@@ -48,6 +47,7 @@
     "react-floating-action-button": "^1.0.5",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
+    "react-spring": "^8.0.23",
     "styled-components": "4.2.0",
     "uid": "0.0.2"
   },
