--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,9 @@
   ],
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait"
+
   "theme_color": "#ffffff",
   "background_color": "#a3ded8"
+
 }
