--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,9 +10,7 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
-
+  "orientation": "portrait",
   "theme_color": "#ffffff",
   "background_color": "#a3ded8"
-
 }
