--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "prettier": "1.17.1",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "16.8.6",
     "react-final-form": "^6.0.1",
     "react-floating-action-button": "^1.0.5",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
+    "react-select": "^3.0.4",
     "react-spring": "^8.0.23",
     "styled-components": "4.2.0",
     "uid": "0.0.2"
