--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "i": "^0.3.6",
     "moment": "^2.24.0",
     "mongoose": "5.5.10",
+    "node-sass": "^4.12.0",
     "nodemon": "1.19.0",
     "npm": "^6.9.0",
     "npm-run-all": "4.1.5",
