--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait",
   "theme_color": "#ffffff",
   "background_color": "#a3ded8"
