--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "16.8.6",
     "react-final-form": "^6.0.1",
     "react-floating-action-button": "^1.0.5",
+    "react-outside-click-handler": "^1.2.3",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4",
