Fix starred ideas styling issue

--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "1.10.0",
-    "docz": "1.2.0",
-    "docz-theme-default": "1.2.0",
+    "docz": "^2.3.1",
+    "docz-theme-default": "^0.13.7",
     "dotenv": "8.0.0",
     "express": "4.17.0",
     "i": "^0.3.6",
     "moment": "^2.24.0",
-    "mongoose": "5.7.5",
+    "mongoose": "^5.12.8",
     "node-sass": "^4.12.0",
     "nodemon": "1.19.0",
     "npm": "^6.9.0",
@@ -41,8 +41,8 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-outside-click-handler": "^1.2.3",
-    "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.0.4",
     "react-spring": "^8.0.23",
     "styled-components": "4.2.0",
